2010-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* Single.cs : parse MaxValue and PositiveInfinity as expected.
	  Patch by Tiaan Geldenhuys.

2010-01-21  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Activator.cs: When calling CreateInstance() and no default .ctor is
	found for the type, don't pass the member argument to the
	MissingMethodException, to have a better and simpler error message.
	Fixes #396986.

2010-01-20 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Tuples.cs: explicitly implement IStructural*.

2010-01-17  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* UInt64.cs: Implement a lightweight version of the Parse method for
	the overload that does not take IFormatProvider/NumberStyle
	parameters - this gets us a nice speed up, just like we do for the
	other number types.
	Fixes #338022.

2010-01-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* Array.cs: Implement IStructuralComparer.

2010-01-15  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Int32.cs: In Parse() cast the parsed value to long *before* changing
	its sign - this way we preserve the original value, instead of
	accidentally changing it. This was happening parsing _exactly_
	MaxValue + 1.
	Fixes #475815.

2010-01-15  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs : In AddMilliseconds(), it seems fractional
	  milliseconds are first rounded and then added.

2010-01-15  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeOffset.cs : preserve fractions (it is somehow dropped).

2010-01-13  Atsushi Enomoto  <atsushi@ximian.com>

	* Double.cs : no need to preserve old code.

2010-01-12  Atsushi Enomoto  <atsushi@ximian.com>

	* Double.cs : AllowLeading/TrailingWhite should also check those
	  surrounding string constants such as "NaN".

2010-01-11  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Int32.cs: Implement support for exponent in the Parse methods.
	Fixes #542464.

2010-01-10  Zoltan Varga  <vargaz@gmail.com>
